--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -79,9 +79,9 @@
           <h3>Your Data</h3>
           <p>UserName: {{ user.username }}</p>
           <p>E-Mail: {{ user.email }}</p>
-          <p>Secret Question:</p>
-          <P>Answer:</P>
-          <p>Gender:</p>
+          <p>Secret Question: Your First {{ user.secretQuestion }}</p>
+          <P>Answer:{{ user.answer }}</P>
+          <p>Gender: {{ user.gender }}</p>
         </div>
       </div>
     </div>
